--- a/css/settings.css
+++ b/css/settings.css
@@ -3383,9 +3383,9 @@ button.TEWmsM70ZLEOxLAjDMpcv ._3Wb9yDmYPUJksCr7HmaT9H {
 }
 
 ._3g-QHB82IGz91Hsk1Hw4lh {
-  color: var(--zehn-color-text-primary) !important;
-  font-size: var(--zehn-size-14) !important;
-  line-height: 32px !important;
+  color: inherit !important;
+  font-size: inherit !important;
+  line-height: inherit !important;
 }
 
 .cbinvNOoQE045ZV5gCk_N {
